tests/m1/negative/private_reexport_type.ax
module private_reexport_type;

import m1lib.reexport_facade;

fn main() -> i32 {
    let value: SecretCount = 1;
    return value;
}

